objects/PbBypassProductCs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PB Bypass Settings for &lt;Object&gt; allows to selectively disable (parts of) process builders. Every object will have a single process builder.</description>
    <fields>
        <fullName>BypassIntegration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Enabled for Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BypassTempProductCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Enabled for Temp Product Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Enabled for Object</label>
        <type>Checkbox</type>
    </fields>
    <label>PB Bypass Settings for Product</label>
</CustomObject>